--- a/caseStudyWP/01-chap1.Rmd
+++ b/caseStudyWP/01-chap1.Rmd
@@ -1,6 +1,6 @@
 # INTRODUCTION
 
-Under DFO's New Fisheries Act, Limit Reference Points (LRPs) will be required for all major fish stocks prescribed in regulation. Stocks that drop below their LRP will trigger the development of a rebuilding plan. For Pacific salmon, it is anticipated there could be > 65 major fish stocks (or stock management units, SMUs), where the proposed functional definition of a SMU is a group of one or more Wild Salmon Policy (WSP) Conservation Units (CUs) that are managed together with the objective of achieving a joint status. Under the WSP, a CU is defined as ‘a group of wild salmon sufficiently isolated from other groups that, if lost, is very unlikely to recolonize naturally within an acceptable time frame, such as human lifetime or a specified number of salmon generations’ (DFO 2005). Thus, while LRPs under the Fisheries Act are required at the SMU-level, monitoring and management under DFO's PA policy occurs at the finer CU-level. Methods to assess CU status have been developed for a range of data types, and integrated assessment methods have been developed in which multiple metrics are combined into a single estimate of CU status (e.g., @grant2017FraserSockeye2020). Metrics used to assign WSP CU status include absolute abundance relative to thresholds, relative abundance, short- and long-term trends in abundance, and distribution of abundance. At present, a key gap in our ability to develop LRPs under the Fisheries Act is that CU-level status assessments have not been aggregated to the SMU level.
+Under DFO's New Fisheries Act, Limit Reference Points (LRPs) will be required for all major fish stocks prescribed in regulation. Stocks that drop below their LRP will trigger the development of a rebuilding plan. For Pacific salmon, it is anticipated there could be > 65 major fish stocks <!--CH: suggest "it is anticipated there will be > 6- major fish stocks..."-->(or stock management units, SMUs), where the proposed functional definition of a SMU is a group of one or more Wild Salmon Policy (WSP) Conservation Units (CUs) that are managed together with the objective of achieving a joint status. Under the WSP, a CU is defined as ‘a group of wild salmon sufficiently isolated from other groups that, if lost, is very unlikely to recolonize naturally within an acceptable time frame, such as human lifetime or a specified number of salmon generations’ (DFO 2005). Thus, while LRPs under the Fisheries Act are required at the SMU-level, monitoring and management under DFO's PA <!--CH: spell out PA here? I see it's defined below--> policy occurs at the finer CU-level. Methods to assess CU status have been developed for a range of data types, and integrated assessment methods have been developed in which multiple metrics are combined into a single estimate of CU status (e.g., @grant2017FraserSockeye2020). Metrics used to assign WSP CU status include absolute abundance relative to thresholds, relative abundance,<!--CH: I always found the distinction between absolute and relative abundance measures confusing to explain. At this stage can we keep it at "spawner abundances" --> short- and long-term trends in abundance, and distribution of abundance. At present, a key gap in our ability to develop LRPs under the Fisheries Act is that CU-level status assessments have not been aggregated to the SMU level.
 
 <!--
 CW: In the above paragraph:
@@ -19,6 +19,8 @@ and integrated assessment models (second meaning)?
 
 -->
 
-LRPs are defined within DFO's 'Precautionary Approach to Fisheries Decision-Making' as the stock status below which serious harm is occurring to the stock [@governmentofcanadaFisheryDecisionmakingFramework2009]. While LRPs are often based on metrics directly linked to productivity, such as spawning biomass or fishing mortality rates, the type of metric used to define an LRP can vary among species and data types, and may be related to other stock characteristics when appropriate. Since the CU is the fundamental unit of biodiversity that DFO aims to maintain under the WSP, it follows that methods for identifying LRPs should ensure that component CUs are maintained.  Holt et al. (in review) suggest that the maintenance of spawning abundance at the Conservation Unit (CU) level is a key biological requirement for Pacific Salmon LRPs.
+<!--CH: I agree with Catarina- integrated assessments can also be confused with Integrated Fisheries Management, which integrates across different sectors"-->
+
+LRPs are defined within DFO's 'Precautionary Approach to Fisheries Decision-Making' as the stock status below which serious harm is occurring to the stock [@governmentofcanadaFisheryDecisionmakingFramework2009]. While LRPs are often based on metrics directly linked to productivity, such as spawning biomass or fishing mortality rates, the type of metric used to define an LRP can vary among species and data types, and may be related to other stock characteristics when appropriate. Since the CU is the fundamental unit of biodiversity that DFO aims to maintain under the WSP, it follows that methods for identifying LRPs should ensure that component CUs are maintained.  Holt et al. (in review<!--CH: suggest specifying companion Working Paper-->) suggest that the maintenance of spawning abundance at the Conservation Unit (CU) level is a key biological requirement for Pacific Salmon LRPs.
 
 The goal of this working paper is demonstrate and evaluate alternative LRP estimation methods for three case study SMUs: Interior Fraser Coho, West Coast Vancouver Island (WCVI) Chinook, and Inner South Coast Chum - excluding Fraser. Each of these SMUs is comprised of 3-7 CUs and has been selected to represent a different level of data availability ranging from data rich (Interior Fraser Coho) to data-limited (Inner South Coast Chum). Detailed guidelines for identifying LRPs for Pacific salmon SMUs informed by these three case study applications are available in the companion working paper *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al., in review). For each case study, the set of LRP estimation methods considered is a function of available data and previously developed assessment methods for the SMU. Estimates presented in this paper are not meant to be definitive LRPs, which require more thorough review of data and methodology with local analysts and partners.  
